# RExecOP

./: .gitignore  CHANGELOG.md  LICENSE  OPERATOR_LAB_RUNBOOK.md  OPERATOR_RUNBOOK.md  README.md  pyproject.toml
.cursor/rules/: github-workflow-hybrid.mdc
.github/workflows/: ci.yml  publish.yml  repair-release-evidence.yml
docs/: adr-001-http-action-identity.md  alpha-sign-off-record.md  alpha-sign-off.md  architecture.md  cli-reference.md  connector-contract.md  distribution.md  environment-contract.md  evidence-model.md  execution-contract.md  first-run.md  govengine-integration.md  known-limitations.md  operation-lifecycle.md  operator-catalog.md  operator-scheduler-pattern.md  profile-contract.md  profile-developer-surface.md  reaction-interpreter.md  runtime-recovery-ops.md  safety-model.md  sclite-integration.md  secrets-operator.md  security-threat-model.md  stack-contract-compatibility.md  storage-backends.md
docs/release-evidence/: README.md
examples/environments/: runtime-fixture.example.yaml  runtime-fixture.policy.example.yaml  runtime-fixture.staging.example.yaml  runtime-fixture.staging.lab.example.yaml  small-public-unit-proxmox.example.yaml  (+1 more)
scripts/: release_evidence.py  run_alpha_signoff_checks.sh  run_staging_http_lab.py  secret_scan.py  secret_scan.sh  validate_distribution.py  validate_f4_conformance_matrix.py  validate_first_run_smoke.py  validate_g3_runtime_governance_gate.py  validate_m10_release_gate.py  validate_operator_journeys.py  validate_public_index_release_smoke.py  validate_public_truth.py  validate_release_train_preflight.py  validate_stack_contracts.py  validate_supply_chain_gate.py  validate_workflow_security.py
tests/: conftest.py  delivery_scope.py  runtime_governance_support.py  test_action_surface.py  test_alpha_gate.py  test_alpha_signoff_gate.py  test_apply_gating.py  test_apply_gating_govengine_client.py  test_apply_vertical_slice_e2e.py  test_audit_cli.py  test_automation_graph.py  test_catalog.py  test_cli_contracts.py  test_cli_errors.py  test_cli_output.py  test_cli_plan_smoke.py  test_cli_smoke.py  test_composite_runtime_routing.py  test_connector_backend_plugins.py  test_connector_policy_engine.py  test_cross_repo_golden_fixture.py  test_delivery_coverage.py  test_distribution_hygiene.py  test_evidence_manager.py  test_execution_contracts.py  test_execution_receipt_honesty.py  test_f4_conformance_matrix.py  test_fixture_bundle_isolation.py  test_g3_runtime_governance.py  test_govengine_adapter.py  test_govengine_client.py  test_http_action_shape.py  test_http_api_connector.py  test_http_health_check_e2e.py  test_internal_action_registry.py  test_m10_release_gate.py  test_m95_execution_permit.py  test_m95_plugin_contract.py  test_m95_reason_codes.py  test_m95_runtime_ports.py  (+57 more)
(+171 files in other folders)
