[project]
name = "rexecop"
version = "0.11.0a0"
description = "Governance-bound deterministic operations control-plane for profile-defined workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "govengine>=0.12.2a0,<0.15",
    "sclite-core>=1.0.1,<1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
sclite = [
    "sclite-core>=1.0.1,<1.1",
]
tecrax = [
    "tecrax-profile>=0.1.0a0,<0.2",
]

[project.scripts]
rexecop = "rexecop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rexecop"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
