[project]
name = "rexecop"
version = "0.2.4a0"
description = "Regulated Execution Operations control-plane for profile-defined workflows bound to GovEngine and SCLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "govengine>=0.15.0,<0.16",
    "sclite-core>=1.0.1,<1.1",
]

[project.urls]
Homepage = "https://github.com/rozmiarD/RExecOP"
Repository = "https://github.com/rozmiarD/RExecOP"
Documentation = "https://github.com/rozmiarD/RExecOP#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
sclite = [
    "sclite-core>=1.0.1,<1.1",
]
tecrax = [
    "tecrax>=0.3.3a0,<0.4",
]

[project.scripts]
rexecop = "rexecop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rexecop"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.cursor",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "delivery: alpha delivery-scope behavioral tests (sign-off subset)",
    "signoff_script: invokes run_alpha_signoff_checks.sh (excluded from nested sign-off)",
    "package_smoke: wheel build and twine metadata check",
]
